Mon Jul 28 14:46:27 CEST 2008 Daniel Veillard <veillard@redhat.com>

	* configure.in: fix my static linking setup on x86_64

Sun Jul 27 13:52:10 CEST 2008 Daniel Veillard <veillard@redhat.com>

	* libxslt/xslt.c: avoid a quadratic behaviour when hitting duplicates
	  exclude-result-prefixes declarations, should fix #544906

Sat Jul 26 12:43:18 PST 2008 William Brack <wbrack@mmm.com.hk>

	*configure.in: fixed option --with-debugger with patch from
	 Arun Ragnavan #544829

Sat Jul 12 16:36:58 PST 2008 William Brack <wbrack@mmm.com.hk>

	* libexslt/math.c: fixed incorrect argument popping in
	  exsltMathAtan2Function #541965

Thu Jul 10 10:04:28 PST 2008 William Brack <wbrack@mmm.com.hk>

	* libxslt/functions.c: patch from Ron Burk to fix problem
	  with string check for element-available and
	  function-available #530891.

Tue Jun 24 23:55:48 PST 2008 William Brack <wbrack@mmm.com.hk>

	* libxslt/attrvt.c: added code to handle literal within an
	  AVT #539741.
	* tests/docs/Makefile.am tests/docs/bug-168.xsl
	* tests/general/Makefile.am tests/general/bug-168.* add a
	  test for this bug to the regression suite.

Fri Jun 13 10:58:52 CEST 2008 Daniel Veillard <daniel@veillard.com>

	* libxslt/libxslt.h libexslt/libexslt.h libexslt/exslt.h: patch
	  from Roumen Petrov fixing include path when compiling with MinGW

Thu Jun 12 11:23:23 CEST 2008 Daniel Veillard <daniel@veillard.com>

	* libxslt/xsltconfig.h.in libxslt/xsltlocale.h configure.in
	  config.h.in win32/configure.js: patch from Nick Wellnhofer and
	  Roumen Petrov to fix some portability problems on the previous
	  xsl:sort locale patch

Tue Jun  3 18:26:26 CEST 2008 Daniel Veillard <daniel@veillard.com>

	* configure.in libxslt/extra.c libxslt/Makefile.am libxslt/preproc.c
	  libxslt/xsltInternals.h libxslt/xsltlocale.c libxslt/xsltlocale.h
	  libxslt/xsltutils.c win32/Makefile.mingw win32/Makefile.msvc: patch
	  from Nick Wellnhofer adding xsl:sort lang support using the locale
	  support from the C library.
